Fixing Bannner and Header text display possitions, gaps and sizes

--- a/app/components/Banner.module.css
+++ b/app/components/Banner.module.css
@@ -41,6 +41,17 @@
   }
 }
 
+@media (max-width: 992px) {
+  .bannerText {
+    margin: unset;
+  }
+}
+@media (max-width: 768px) {
+  .bannerText {
+    gap: 0.5svh;
+  }
+}
+
 @media (768px <= width <= 992px) {
   .banner {
     font-size: 2vw;
