--- a/app/components/Header.module.css
+++ b/app/components/Header.module.css
@@ -66,7 +66,6 @@
     grid-template-rows: 1fr 1fr;
     padding: 0.3rem 1rem;
     min-width: unset;
-    grid-gap: 0.2rem;
   }
   .direita {
     justify-content: center;
@@ -74,9 +73,6 @@
     .gap1 {
       flex-direction: unset;
     }
-  }
-  .gap1 {
-    gap: 0.5rem;
   }
   .icon {
     height: 0.6rem;
@@ -87,11 +83,13 @@
     height: 32px;
     width: 85px;
   }
-  .date {
+  .date, .address{
     font-weight: 300;
+    font-size: smaller;
+    gap: unset;
   }
-  .address {
-    font-weight: 300;
+  .gap1 a {
+    padding-right: 0.5rem;
   }
   span.toHide {
     display: none;
@@ -121,6 +119,10 @@
     .gap1 {
       flex-direction: unset;
     }
+    margin: unset
+  }
+  .gap1 a {
+    padding-right: 0.5rem;
   }
   .icon {
     height: 0.6rem;
@@ -134,11 +136,9 @@
   .date, .address{
     font-weight: 300;
     font-size: smaller;
+    gap: unset;
   }
 
-  .address {
-    padding-left: 2rem;
-  }
   span.toHide {
     display: none;
   }
